# synops

./: .clang-format  .gitignore  compile_flags.sh  meson.build  shell.nix
include/: synops.h
src/: synops.c  synops_files.c  synops_sql.h
